tests/bad/func/positional_after_labelled.oc
/// fail: Can't have positional arguments after labelled arguments


def foo(a: u32, b: u32 = 4, c: u32 = 5): u32 => a + b + c

def main() {
    foo(1, c: 8, 7)
}